--- a/style.css
+++ b/style.css
@@ -92,6 +92,27 @@ h1.headline{
 
 /*Fim do componente Main-Content*/
 
+/*Componente botao-comprar*/
+.botaocomprar > .botao{
+	text-decoration: none;
+	position: relative;
+	top: 15%;
+	color: white;
+	font-size: 1.5em;
+	font-weight: bold;
+}
+
+.botaocomprar{
+	font-family: "Yanone Kaffeesatz";
+	display: block;
+	width: 100%;
+	height: 5em;
+	background: rgba(59,89,152,255);
+}
+
+.empolgado{
+	color: rgba(0,212,85,255);
+}
 
 
 
