--- a/style.css
+++ b/style.css
@@ -90,12 +90,18 @@ h1.headline{
 /* Fim das manipulações necessárias para deixar o player responsivo*/
 
 /*Comportamento responsivo do botão de compra*/
+
 .botaocomprar > .chamadadobotao{
-	position: relative;
-	bottom: 25%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0;
+	width: 100%;
+	height: 100%;
 	color: white;
 	font-size: 1.7em;
 	font-weight: bold;
+	/*line-height: 270%;	*/
 }
 
 .botaocomprar > .formasdepagar{
@@ -119,35 +125,33 @@ h1.headline{
 @media (min-width: 21.3em) {
 	.botaocomprar > .chamadadobotao{
 		font-size: 1.9em;
-		bottom: 35%;
 	}
 }
 
 @media (min-width: 23.25em) {
 	.botaocomprar > .chamadadobotao{
-		font-size: 1.8em;
-		bottom: 12.5%;
+		font-size: 1.8em;	
 	}
 }
 
 @media (min-width: 30em) {
 	.botaocomprar > .chamadadobotao{
 		font-size: 2.2em;
-		bottom: 25%;
+		/*line-height: 200%;*/
 	}
 }
 
 @media (min-width: 34em) {
 	.botaocomprar > .chamadadobotao{
 		font-size: 2.5em;
-		bottom: 32%;
+		/*line-height: 190%;*/
 	}
 }
 
 @media (min-width: 38em) {
 	.botaocomprar > .chamadadobotao{
 		font-size: 2.7em;
-		bottom: 38%;
+		/*line-height: 170%;*/
 	}
 }
 
