--- a/style.css
+++ b/style.css
@@ -124,6 +124,16 @@ h1.headline{
 	font-size: 3em;
 }
 
+.estrutura-curso{
+	font-family: "Yanone Kaffeesatz";
+	text-align: center;
+	/*font-size: 1em;*/
+}
+
+.estrutura-curso > .chamadacurso{
+	font-weight: normal;
+}
+
 @media (min-width: 21.3em) {
 	.botaocomprar > .chamadadobotao{
 		font-size: 1.9em;
