Novos erros bobos encontrados na declaração de font-family - faltava ponto e virgula

--- a/style.css
+++ b/style.css
@@ -3,23 +3,23 @@
 }
 
 @font-face{
-	font-family: "Bebas Neue"
+	font-family: "Bebas Neue";
 	src: url("./fonts/BebasNeueRegular.ttf") format('truetype');
 
 }
 
 @font-face{
-	font-family: "Yanone Kaffeesatz"
+	font-family: "Yanone Kaffeesatz";
 	src: url("./fonts/YanoneKaffeesatz-Regular.otf") format('opentype');
 }
 
 @font-face{
-	font-family: "Roboto"
+	font-family: "Roboto";
 	src: url("./fonts/Roboto-Regular.ttf") format('truetype');
 }
 
 @font-face{
-	font-family: "Roboto Light"
+	font-family: "Roboto Light";
 	src: url("./fonts/Roboto-Light.ttf") format('truetype');
 }
 
