--- a/style.css
+++ b/style.css
@@ -64,7 +64,8 @@ h1.headline{
 	top: 0; 
 	left: 0%; 
 	width: 100%; 
-	height: 100%; 
+	height: 100%;
+	border: 0; 
 }
 
 @media (min-width: 45em) {
