--- a/temp.css
+++ b/temp.css
@@ -71,23 +71,22 @@ h1.headline{
 @media (min-width: 45em) {
 	.video { 
 		position: relative; 
-		padding-bottom: 39.4%; 
+		padding-bottom: 41.25%; 
 		height: 0; 
 		overflow: hidden; 
 		max-width: 100%;
 	} 
 	
 	.video iframe, .video object, .video embed { 
-		/*position: absolute; 
+		position: absolute; 
 		top: 0; 
-		left: 13.5%;*/ 
-		position: relative;
-		width: 420px; 
-		height: 236px; 
+		left: 12.5%; 
+		width: 75%; 
+		height: 100%; 
 	}
 }
 
-/*@media (min-width: 60em) {
+@media (min-width: 60em) {
 	.video { 
 		position: relative; 
 		padding-bottom: 26.25%; 
@@ -103,7 +102,7 @@ h1.headline{
 		width: 50%; 
 		height: 100%; 
 	}
-}*/
+}
 /* Fim das manipulações necessárias para deixar o player responsivo*/
 
 /*Comportamento responsivo do botão de compra*/
@@ -347,37 +346,11 @@ h1.headline{
 
 /*Comportamento bônus */
 .bonus-total{
-	font-family: "Roboto";
 	display: block;
 	text-align: center;
 	background-color: rgba(207,207,207,255);
 	margin-top: 2em;
 	padding: 1em;
-}
-
-.bonus-total > .chamadabonus{
-	font-family: "Bebas Neue";
-	width: 100%;
-} 
-
-
-@media (min-width: 45em){
-	.bonus-total{
-		display: flex;
-		align-items: flex-start;
-		justify-content: center;
-		flex-flow: row wrap;
-		align-content: center;
-	}
-
-	.bonus{
-		text-align: left;
-		width: 33%;
-		float: left;
-		margin-top: 1em;
-		padding-right: 2%;
-		padding-left: 2%;
-	}
 }
 
 
@@ -386,5 +359,4 @@ h1.headline{
 		margin-top: 10em;
 	}
 }
-
 /*Fim comportamento bônus*/
