--- a/style.css
+++ b/style.css
@@ -417,16 +417,17 @@ h1.headline{
 
 /*comportamento footer*/
 
-.opcoes-menu{
-	display: block;
-	height: 5em;
-	text-align: center;
-}
+/*.opcoes-menu{
+	display: inline-flex;
+}*/
 
-.itemdomenu{
-	margin-left: 1em;
-	margin-right: 1em;
-	margin-top: 2.5em;
+/*.itemdomenu{
+	width: 100%;
+	float: left;
+}*/
+
+.opcoes-menu{
+	margin: 1em;
 }
 
 .opcoes-menu > .rodape{
@@ -434,8 +435,37 @@ h1.headline{
 	border: 0;
 	padding: 0;
 	margin: 0;
-	vertical-align: baseline;
-	display: inline-flex;
+	display: block;
+	text-align: center;
+}
+
+@media (min-width: 45em){
+
+	.opcoes-menu{
+		margin: 0;
+	}
+
+	.opcoes-menu > .rodape{
+		list-style: none;
+		border: 0;
+		padding: 0;
+		margin: 0;
+		vertical-align: baseline;
+		display: inline-flex;
+		text-decoration: none;
+	}
+
+	.opcoes-menu{
+		display: block;
+		height: 5em;
+		text-align: center;
+	}
+
+	.itemdomenu{
+		margin-left: 1em;
+		margin-right: 1em;
+		margin-top: 2.5em;
+	}
 }
 
 /*fim comportamento footer*/
