--- a/style.css
+++ b/style.css
@@ -553,13 +553,33 @@ h1.headline{
 /*Termos de uso*/
 
 .termos-uso{
-	width: 70%;
+	width: 95%;
 	font-family: "Yanone Kaffeesatz";
 	text-align: justify;
+	padding-left: 2em;
+	padding-right: 2em;
+	font-size: 1.2em;
+	line-height: 2em;
 }
 
 .titulotermos{
 	text-align: center;
 }
+
+@media (min-width: 45em){
+	.termos-uso{
+		padding-left: 5em;
+		padding-right: 5em;
+		font-size: 1.5em;
+		line-height: 2em;
+	}
+}	
+
+@media (min-width: 60em){
+	.termos-uso{
+		padding-left: 7.5em;
+		padding-right: 7.5em;
+	}
+}	
 
 /*Fim do termos de uso*/
