Talvez eu tenha conseguido encontrar os números mágicos para o iframe do vídeo.

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ h1.headline{
 /*Manipulações necessárias para deixar o player responsivo*/
 .video { 
 	position: relative; 
-	padding-bottom: 56.25%; 
+	padding-bottom: 52.25%; 
 	height: 0; 
 	overflow: hidden; 
 	max-width: 100%;
@@ -95,19 +95,26 @@ h1.headline{
 @media (min-width: 45em) {
 	.video { 
 		position: relative; 
-		padding-bottom: 39.4%; 
+		padding-bottom: 33.76%; 
+		/*padding-bottom: 39.76%; */
 		height: 0; 
 		overflow: hidden; 
-		max-width: 100%;
+		max-width: 60%;
+		width: 100%;
+		margin-left: 19.6%;
 	} 
 	
 	.video iframe, .video object, .video embed { 
-		/*position: absolute; 
-		top: 0; 
-		left: 13.5%;*/ 
-		position: relative;
+		position: absolute; 
+		/*top: 0; 
+		left: 0;*/
+		/*padding-bottom: 10%;*/
+
+/*		width: 100%;
+		height: 64.7%;*/
+		/*position: relative;
 		width: 420px; 
-		height: 236px; 
+		height: 236px; */
 	}
 }
 
@@ -548,6 +555,9 @@ h1.headline{
 		font-size: 2em;
 	}
 }
+/*Como fazer cards, muito bom*/
+/*http://codepen.io/bennettfeely/pen/Ftczh*/ 
+
 /*Final comportamento reportagen*/
 
 /*Termos de uso*/
