--- a/style.css
+++ b/style.css
@@ -601,8 +601,15 @@ h1.headline{
 	color: black;
 }
 
-.preco-promocional > .preco{
+.preco-promocional > .preconormal{
+	text-decoration: line-through;
+	text-decoration-color: red;
+}
+
+
+.preco-promocional > .precofinal{
 	color: red;
+	font-size: 1.5em;
 }
 
 /*fim do preço promocional */
