--- a/style.css
+++ b/style.css
@@ -594,7 +594,10 @@ h1.headline{
 	font-family: 'Roboto';
 	font-weight: bolder;
 	font-size: 3em;
-	color: gray;
+	/*color: gray;*/
+	color: #43545b;
+	line-height: 1em;
+
 }
 
 .preco-promocional > .chamadatemporaria{
@@ -610,6 +613,7 @@ h1.headline{
 .preco-promocional > .precofinal{
 	color: red;
 	font-size: 1.5em;
+	/*text-decoration: underline;*/
 }
 
 /*fim do preço promocional */
